MB-57711: report both configured and actual thread stats

As part of the 'threads' stat group, report both the number of threads
configured, and the number actually created. This is useful because
the background thread pools can have symbolic nubmers of threads
configured ("default", "disk_io_optimized"), so also reporting how
many actual threads that maps to is valuable.

Example output:

    ‡ ../install/bin/mcstat --host localhost:12000 -u Administrator -P asdasd threads
    num_frontend_threads_configured 8
    num_frontend_threads_actual 8
    num_reader_threads_configured 0
    num_reader_threads_actual 10
    num_writer_threads_configured 0
    num_writer_threads_actual 4
    num_auxio_threads_configured 0
    num_auxio_threads_actual 10
    num_nonio_threads_configured 0
    num_nonio_threads_actual 5

Change-Id: Ibfbdbf9b0e061f89993594956fd3ae3b36cc3e61
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/193577
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Restriction Checker
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>